# zootable

./: .coveragerc  .dockerignore  .env.example  .gitignore  .travis.yml  .watchmanconfig  NOTES.md  Procfile  README.md  app.json  deploy_notes.md  docker-compose.yml  dockerfile  fly.toml  notes.MD  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.py  test.py
.github/workflows/: backup_db.yml  lint.yml  pythonapp.yml
docker/: start.sh
mysite/: asgi.py  settings.py  test_settings.py  urls.py
mysite/accounts/: urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: account_management.html  base.html  home.html
mysite/zoo_checks/: admin.py  apps.py  models.py  views.py
scripts/: debugging.py  identify_user_enclosure_overlaps.py  ingest_xlsx_data.py  max_len_accessions.py  uploader.py
templates/: base.html  home.html
templates/partials/: login_message.html  top_bar.html  top_bar_links.html
test_data/: empty_data.xlsx  example.xlsx  malformed.xlsx  only_animals.xlsx  only_groups.xlsx  too_many_digits_access_num.xlsx  wrong_column.xlsx
tests/: conftest.py  test_helpers.py  test_ingest.py  test_models.py  test_views.py
zoo_checks/: admin.py  apps.py  custom_storage.py  forms.py  helpers.py  ingest.py  models.py  views.py
zoo_checks/migrations/: 0006_auto_20190606_0434.py  0011_auto_20190608_2123.py  0012_auto_20190609_0013_squashed_0039_auto_20200724_2335.py  0013_animalphoto.py  0038_role_slug.py  (+14 more)
(+121 files in other folders)
