[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.test_settings"
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
omit = ["*/migrations/*"]
source = ["."]

[tool.ruff]
extend-exclude = ["**/migrations/**"]
