[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zootable"
authors = [{ name = "Benjamin Falk" }]
dynamic = ["version"]
dependencies = [
    "dj-database-url",
    "django-allauth",
    "django-extensions",
    "django>=5.2,<6",
    "gunicorn",
    "openpyxl",
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "uvicorn[standard]",
    "whitenoise[brotli]",
    "django-browser-reload",
]
requires-python = ">=3.13"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.test_settings"
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
omit = ["*/migrations/*"]
source = ["."]

[tool.ruff]
extend-exclude = ["**/migrations/**"]
